# dire

./: .gitignore  CMakeLists.txt  README.md  config.h.in  explore.cpp  explore.h  main.cpp  print.cpp  print.h  scan.cpp  scan.h  strutil.cpp  strutil.h  treeutil.cpp  treeutil.h
termcolor/: github.url
